# joangel-prosperas-challenge

./: .env.example  .gitignore  AI_WORKFLOW.md  DESIGN_REFERENCE.html  Makefile  README.md  SKILL.md  TECHNICAL_DOCS.md  docker-compose.yml
.github/agents/: challenge-architect.agent.md  challenge-developer.agent.md
.github/skills/challenge-architect/: SKILL.md
.github/skills/challenge-developer/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  ruff.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  health.py  jobs.py  websocket.py
backend/app/core/: config.py  database.py  exceptions.py  logging_config.py  security.py
backend/app/models/: job.py  schemas.py  user.py
backend/app/services/: job_service.py  queue_service.py  user_service.py
backend/app/worker/: __init__.py  __main__.py  circuit_breaker.py  consumer.py  processor.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_circuit_breaker.py  test_consumer.py  test_models.py  test_services.py  test_worker.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  config.ts  index.css
infra/: alb.tf  cloudfront.tf  dynamodb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  s3.tf  sqs.tf  terraform.tfvars.example  variables.tf  vpc.tf
local/: docker-compose.yml
local/localstack/: init-aws.sh
scripts/: cleanup-aws.ps1  cleanup-aws.sh  deploy.sh  init-db.sh  seed-data.sh
(+21 files in other folders)
