[project]
name = "prosperas-report-api"
version = "0.1.0"
description = "Async report processing API for Prosperas challenge"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/worker/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70
